# gymtr

./: .gitignore
backend/: .gitignore  Makefile  alembic.ini  pyproject.toml  pytest.ini
backend/migrations/: env.py
backend/migrations/versions/: 2024_10_14_2121-d202363876d2_add_user_table.py  2024_10_15_1151-0af44c273d96_alter_user_table.py
backend/src/: database.py  events.py  exceptions.py  main.py  offline.py  typing.py
backend/src/api/v1/: api.py  dependencies.py  error.py
backend/src/core/: celery.py
backend/src/core/config/: __init__.py  base.py  develop.py  production.py  testing.py
backend/src/core/types/: __init__.py
backend/src/logs/: config.py  filters.py  formatter.py  handlers.py  reader.py  schemas.py  tasks.py  types.py  writer.py
backend/src/logs/storage/: __init__.py  base.py  exceptions.py  locmem_storage.py  redis.py
backend/src/middlewares/: __init__.py  logs.py
backend/src/models/: __init__.py  user.py
backend/src/models/types/: __init__.py
backend/src/repository/: __init__.py  users.py
backend/src/schemas/: base.py  error.py  pagination.py  user.py
backend/src/schemas/params/: paginate.py
backend/src/services/: files.py  parsers.py  renderers.py
backend/src/services/auth/: __init__.py  authenticator.py  backend.py  config.py  exceptions.py  jwt_shortcuts.py  mixins.py  password.py  service.py  verificator.py
backend/src/tasks/: __init__.py  mailing.py
backend/src/templates/: __init__.py
backend/src/utils/: checker.py  clock.py  enums.py  exceptions.py  loading.py  regex.py  shortcuts.py
(+54 files in other folders)
