[tool.poetry]
name = "Gymtr"
version = "0.1.0"
description = "Трекер физических упражнений"
authors = ["kssred <hi@ksred.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.2"
uvicorn = "^0.31.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.35"}
alembic = "^1.13.3"
greenlet = "^3.1.1"
python-dotenv = "^1.0.1"
pydantic = {extras = ["email"], version = "^2.9.2"}
pydantic-settings = "^2.5.2"
asyncpg = "^0.29.0"
celery = "^5.4.0"
redis = "^5.1.1"
httpx = "^0.27.2"
python-multipart = "^0.0.12"
gunicorn = "^23.0.0"
makefun = "^1.15.6"
pyjwt = "^2.9.0"
bcrypt = "^4.2.0"
passlib = "^1.7.4"
aiofiles = "^24.1.0"
wheel = "^0.44.0"
setuptools = "^75.1.0"
jinja2 = "^3.1.4"
pycryptodome = "^3.21.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"
pytest-randomly = "^3.15.0"
coverage = "^7.6.3"
pytest-env = "^1.1.5"
flower = "^2.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
